apply plugin: 'com.android.application'

android {
    compileSdk = 37
    defaultConfig {
        applicationId "com.jacstuff.musicplayer"
        minSdkVersion 30
        targetSdkVersion 37
        versionCode 5
        versionName "1.5"
        testInstrumentationRunner 'androidx.test.runner.AndroidJUnitRunner'
    }

    defaultConfig {
        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
    }

    buildTypes {
        release {
            minifyEnabled false
            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
        }
    }
    namespace 'com.jacstuff.musicplayer'
    compileOptions {
        sourceCompatibility JavaVersion.VERSION_21
        targetCompatibility JavaVersion.VERSION_21
    }
}

dependencies {
    implementation fileTree(dir: 'libs', include: ['*.jar'])
    implementation 'androidx.appcompat:appcompat:1.8.0'
    implementation 'androidx.constraintlayout:constraintlayout:2.2.2'
    implementation 'com.google.android.material:material:1.14.0'
    implementation 'androidx.preference:preference:1.2.1'
    implementation 'androidx.recyclerview:recyclerview:1.4.0'
    implementation 'com.intuit.sdp:sdp-android:1.1.1'
    testImplementation 'junit:junit:4.13.2'
    androidTestImplementation 'androidx.test.ext:junit:1.3.0'
    androidTestImplementation 'androidx.test.espresso:espresso-core:3.7.0'
    androidTestImplementation "androidx.test:runner:1.7.0"
    androidTestImplementation "androidx.test:rules:1.7.0"
    testImplementation 'androidx.test:core:1.7.0'
    androidTestImplementation 'androidx.test:core:1.7.0'
}
